[Update] view currency exchange rate